Implemented blogs list page and its components. Also installed icons and finalized implementing the dark theme.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
       }
     ],
     "paths": {
-      "@*": ["./*"]
+      "@*": ["./*"],
+      "@c/*": ["./components/*"],
+      "@l/*": ["./lib/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
