--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "nanoid": "^5.1.6",
     "next": "15.5.4",
